--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,6 @@
 @import "./components/_header.css";
 @import "./components/main.css";
 @import "./components/_navbar.css";
+@import "./components/_quizcard.css";
+@import "./components/_bookmark.css#";
+
