add form for addpage

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,4 @@
 @import "./components/_navbar.css";
 @import "./components/_quizcard.css";
 @import "./components/_bookmark.css#";
-
+@import "./components/_addpage.css";
