--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,4 @@
 @import "./components/_quizcard.css";
 @import "./components/_bookmark.css#";
 @import "./components/_addpage.css";
+@import "./components/_profile.css";
