--- a/css/components/_addpage.css
+++ b/css/components/_addpage.css
@@ -17,7 +17,7 @@
     "Hashtag1" "Hashtag1"
     "Hashtag2" "Hashtag2"
     "Hashtag3" "Hashtag3";
-    background-color: antiquewhite;
+    background-color: palegoldenrod;
     border: 5px solid orange;
     border-radius: 50px;
     padding: 20px;
