--- a/css/components/_quizcard.css
+++ b/css/components/_quizcard.css
@@ -29,7 +29,7 @@
     /* sajust inner items to the center */
     justify-items: center;
     position: relative;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .quizcard--bookmarkicon {
