--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -1,18 +1,11 @@
-.header {
-    /* fixed the header to the top border */
-    position: fixed;
-    top: 0;
-    /* hights fixed width 100% of the monitor */
+.topbar {
+    display: flex;
     width: 100vw;
-    height: 70px;
-    background-color: red;
-    /* rounded border on the bottom corners */
+    max-width: 1340px;
+    background: gold;
+    justify-content: space-between;
+    align-content: center;
+    padding: 2%;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
-    font-size: 25px;
-    /* declared as flexbox and formated all elements in the middle */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 5;
 }
