--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,6 @@
 @import "./components/_bookmark.css#";
 @import "./components/_addpage.css";
 @import "./components/_profile.css";
+@import "./components/_animations.css";
+@import "./components/startrek.css";
+@import "./components/media/_media.css"
