--- a/css/components/_navbar.css
+++ b/css/components/_navbar.css
@@ -1,40 +1,61 @@
 .container--navbar {
-    /* fixed the header to the top border */
-    position: fixed;
-    bottom: 0;
-    /* hights fixed width 100% of the monitor */
+    display: grid;
+    height: 67px;
     width: 100vw;
-    height: 70px;
-    background-color: red;
-    /* rounded border on the bottom corners */
+    background: black;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    position: fixed;
+    bottom: 0%;
+    gap: 5px;
+
+}
+
+.navbar-bottomleftcorner {
+    grid-column: 1 / 2;
+    grid-row: 1 / 7;
+    background: rgb(158, 158, 238);
     border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    /* declared as flexbox and formated all elements in the middle */
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.container--mainpagebutton {
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
+.navbar--bottom1 {
+    grid-column: 2 / 5;
+    grid-row: 1 / 3;
+    background: rgb(158, 158, 238);
 }
 
-.container--bookmarkpagebutton {
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
+.navbar--bottom2 {
+    grid-column: 5 / 6;
+    grid-row: 1 / 3;
+    background: rgb(158, 158, 238);
 }
 
-.container--addpagebutton{
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
+.navbar--mainpagebutton {
+    grid-column: 2 / 3;
+    grid-row: 3 / 7;
+    max-width: 200px;
+    border: none;
+    background: rgb(158, 158, 238);
+
 }
 
-.container--profilepagebutton {
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
+.navbar--bookmarkpagebutton {
+    grid-column: 3 / 4;
+    grid-row: 3 / 7;
+    max-width: 200px;
+    background: rgb(158, 158, 238);
+}
+
+.navbar--addpagebutton {
+    grid-column: 4 / 5;
+    grid-row: 3 / 7;
+    max-width: 200px;
+    background: rgb(158, 158, 238);
+}
+
+.navbar--profilepagebutton {
+    grid-column: 5 / 6;
+    grid-row: 3 / 7;
+    max-width: 200px;
+    background: rgb(158, 158, 238);
 }
