--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -2,15 +2,15 @@
     position: fixed;
     top: 0%;
     right: 0;
-    width: 100vw;
+    width: 100vw !important;
     z-index: 2;
 }
 
 .header--box {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 0,5fr 0,5fr;
-    width: 100wv; 
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    width: 100wv !important; 
     height: 150px;
     gap: 5px;
     background-color: black;
@@ -88,36 +88,42 @@
 
 @media only screen and (min-width: 766px) {
     .header--box {
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 0,5fr 0,5fr 1fr 1fr;
+        grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 
     .box--headline {
-        grid-column: 6 / 8;
+        grid-column: 2 / 6;
         grid-row: 1 / 2;
     }
 
     .box--button1 {
-        grid-column: 6 / 7;
+        grid-column: 4 / 5;
     }
     
     .box--button2 {
-        grid-column: 6 / 7;
+        grid-column: 4 / 5;
     }
 
     .box--button3 {
-        grid-column: 7 / 8;
+        grid-column: 5 / 6;
     }
 
     .box--button4 {
-        grid-column: 7 / 8;
+        grid-column: 5 / 6;
     }
 
     .box--bottom1 {
-        grid-column: 2 / 6;
+        grid-column: 2 / 5;
+        grid-row: 5 / 7;
     }
     
     .box--bottom2 {
-        grid-column: 6 / 8;
+        grid-column: 5 / 6;
+        grid-row: 5 / 7;
+    }
+
+    .box--leftbottomborder {
+        grid-row: 3 / 7;
     }
 }
