--- a/css/components/_navbar.css
+++ b/css/components/_navbar.css
@@ -1,38 +1,41 @@
+.container {
+    width: 100wv;
+}
+
 .container--navbar {
     display: grid;
     height: 67px;
     width: 100vw;
     background: black;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     position: fixed;
     bottom: 0%;
     gap: 5px;
-
 }
 
 .navbar-bottomleftcorner {
     grid-column: 1 / 2;
-    grid-row: 1 / 7;
+    grid-row: 1 / 5;
     background: rgb(158, 158, 238);
     border-top-left-radius: 50px;
 }
 
 .navbar--bottom1 {
     grid-column: 2 / 5;
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
     background: rgb(158, 158, 238);
 }
 
 .navbar--bottom2 {
     grid-column: 5 / 6;
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
     background: rgb(158, 158, 238);
 }
 
 .navbar--mainpagebutton {
     grid-column: 2 / 3;
-    grid-row: 3 / 7;
+    grid-row: 2 / 5;
     max-width: 200px;
     border: none;
     background: rgb(158, 158, 238);
@@ -41,21 +44,55 @@
 
 .navbar--bookmarkpagebutton {
     grid-column: 3 / 4;
-    grid-row: 3 / 7;
+    grid-row: 2 / 5;
     max-width: 200px;
     background: rgb(158, 158, 238);
 }
 
 .navbar--addpagebutton {
     grid-column: 4 / 5;
-    grid-row: 3 / 7;
+    grid-row: 2 / 5;
     max-width: 200px;
     background: rgb(158, 158, 238);
 }
 
 .navbar--profilepagebutton {
     grid-column: 5 / 6;
-    grid-row: 3 / 7;
+    grid-row: 2 / 5;
     max-width: 200px;
     background: rgb(158, 158, 238);
+}
+
+@media only screen and (min-width: 766px) {
+    .header--box {
+        grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+    }
+
+    .navbar-bottomleftcorner {
+        grid-column: 1 / 2;
+    }
+
+    .navbar--bottom1 {
+        grid-column: 2 / 5 ;
+    }
+
+    .navbar--bottom2 {
+        grid-column: 5 / 6;
+    }
+
+    .navbar--mainpagebutton {
+        grid-column: 2 / 3;
+    }
+
+    .navbar--bookmarkpagebutton {
+        grid-column: 3 / 4;
+    }
+
+    .navbar--addpagebutton {
+        grid-column: 4 / 5;
+    }
+
+    .navbar--profilepagebutton {
+        grid-column: 5 / 6;
+    }
 }
