--- a/css/components/_bookmark.css
+++ b/css/components/_bookmark.css
@@ -1,43 +1,48 @@
-.bookmark--quizcard {
-    /* set quizcard to grid */
+.bookmarkpage--bookmarkquizcard1 {
     display: grid;
-    /* set backdgroundcolor */
-    background-color: palegoldenrod;
-    /* set border thinkness type and color */
-    border: 5px solid orange;
-    /* for rounded corners */
-    border-radius: 50px;
-    /* for space between content and border */
-    padding: 20px;
-    /* for space between border and outer objects */
-    margin: 10px;
-    /* card setup */
-    grid-template-areas:
-    "question question"
-    "asnwer answer"
-    "answerbutton answerbutton"
-    "hashtag hashtag";
-    /* sajust inner items to the center */
-    justify-items: center;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    /* width: ; */
+    gap: 5px;
+    background: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-
-
-.quizcard--question {
-    grid-area: question;
+.bookmarkquizcard--question1 {
+    grid-column: 2 / 6;
+    grid-row: 1 / 2;
+    background: orange;
 }
 
-.quizcard--answer {
-    grid-area: answer;
+.bookmarkquizcard--bookmarkbox1 {
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
+    background: rgb(245, 175, 163);
 }
 
-.quizcard--answerbutton {
-    grid-area: answerbutton;
-    width: 15vw;
-    height: 8vh;
-    border-radius: 15px;
+.bookmarkquizcard--answerbox1 {
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+    background: rgb(234, 77, 77);
 }
 
-.quizcard--hashtag {
-    grid-area: hashtag;
+.bookmarkquizcard--answerbutton1 {
+    grid-column: 2 / 6;
+    grid-row: 3 / 4;
+    background: rgb(158, 158, 238);
+}
+
+.bookmarkquizcard--hashtag1 {
+    grid-column: 2 / 6;
+    grid-row: 4 / 5;
+    background: orange;
+}
+
+.bookmarkquizcard--left1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 5;
+    background-color: rgb(245, 175, 163);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
 }
