--- a/css/components/_quizcard1.css
+++ b/css/components/_quizcard1.css
@@ -1,7 +1,7 @@
 .quizcardpage--quizcard1 {
     display: grid;
-    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     /* width: ; */
     gap: 5px;
     background: black;
@@ -10,38 +10,45 @@
 }
 
 .quizcard--question1 {
-    grid-column: 2 / 6;
+    grid-column: 3 / 7;
     grid-row: 1 / 2;
     background: orange;
+    padding: 5px;
+    border-top-left-radius: 10px;
 }
 
 .quizcardpage--bookmarkbox1 {
-    grid-column: 5 / 6;
+    grid-column: 6 / 7;
     grid-row: 2 / 3;
     background: rgb(245, 175, 163);
+    padding: 5px;
 }
 
 .quizcard--answerbox1 {
-    grid-column: 2 / 5;
+    grid-column: 3 / 6;
     grid-row: 2 / 3;
     background: rgb(234, 77, 77);
+    padding: 5px;
 }
 
 .quizcard--answerbutton1 {
-    grid-column: 2 / 6;
+    grid-column: 3 / 7;
     grid-row: 3 / 4;
     background: rgb(158, 158, 238);
+    padding: 5px;
 }
 
 .quizcard--hashtag1 {
-    grid-column: 2 / 6;
+    grid-column: 3 / 7;
     grid-row: 4 / 5;
     background: orange;
+    padding: 5px;
+    border-bottom-left-radius: 10px
 }
 
-.quizcard--left1 {
+.quizcardpage--left1 {
     grid-column: 1 / 2;
-    grid-row: 1 / 5;
+    grid-row: 1 / 6;
     background-color: rgb(245, 175, 163);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
