--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,4 @@
 @import "./components/_bookmark.css#";
 @import "./components/_addpage.css";
 @import "./components/_profile.css";
+@import "./components/_animations.css";
