--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -62,12 +62,18 @@
 }
 
 .box--lefttopborder {
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
     background: pink;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    /* text-align: right; */
 }
 
 .box--leftbottomborder {
+    display: flex;
+    justify-content: right;
     background: rgb(158, 158, 238);
     grid-column: 1 / 2;
     grid-row: 3 / 6;
