--- a/css/components/_addpage.css
+++ b/css/components/_addpage.css
@@ -1,6 +1,7 @@
 .container--addpagepage {
     display: grid;
-    grid-template-columns: 150px 1fr 1fr;
+    height: 70vh;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 2px;
     background: black;
@@ -9,55 +10,122 @@
 }
 
 .addpagepage--welcome {
-    grid-column: 2 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2 / 10;
     grid-row: 1 / 2;
-    background: orange;
-    border-top-right-radius: 10px;
-    padding: 5px;
+    background: rgb(158, 158, 238);
+    border-top-right-radius: 30px;
 }
 
-.addpagepage--question {
-    grid-column:  2 / 6;
+.addpagepage--question--tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / 4;
     grid-row: 2 / 3;
-    background: red;
-    border-top-right-radius: 10px;
-    padding: 5px;
-}
-
-.addpagepage--answer {
-    grid-column:  2 / 6;
-    grid-row: 3 / 4;
-    background: rgb(158, 158, 238);
-    padding: 5px;
-}
-
-.addpagepage--hashtagone {
-    grid-column:  2 / 6;
-    grid-row: 4 / 5;
     background: orange;
-    padding: 5px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
-.addpagepage--hashtagtwo {
-    grid-column:  2 / 6;
+.addpagepage--question--input {
+    grid-column: 4 / 10;
+    grid-row: 2 / 3;
+    background: orange;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.addpagepage--answer--tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+    background: rgb(245, 175, 163);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.addpagepage--answer--input {
+    grid-column: 4 / 10;
+    grid-row: 3 / 4;
+    background: rgb(245, 175, 163);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.addpagepage--hashtag1--label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+    background: rgb(234, 77, 77);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.addpagepage--hashtag1--input {
+    grid-column: 4 / 10;
+    grid-row: 4 / 5;
+    background: rgb(234, 77, 77);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.addpagepage--hashtag2--label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / 4;
     grid-row: 5 / 6;
-    background: rgb(158, 158, 238);
-    padding: 5px;
+    background: rgb(245, 175, 163);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
-.addpagepage--hashtagthree {
-    grid-column:  2 / 6;
+.addpagepage--hashtag2--input {
+    grid-column: 4 / 10;
+    grid-row: 5 / 6;
+    background: rgb(245, 175, 163);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.addpagepage--hashtag3--label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 2 / 4;
     grid-row: 6 / 7;
-    background: red;
-    border-bottom-right-radius: 10px;
-    padding: 5px;
+    background: orange;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.addpagepage--hashtag3--input {
+    grid-column: 4 / 10;
+    grid-row: 6 / 7;
+    background: orange;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.submitbutton {
+    grid-column: 2 / 10;
+    grid-row: 7 / 8;
+    background: rgb(158, 158, 238);
+    border: none;
+    border-bottom-right-radius: 30px;
 }
 
 .addpagepage--sidebarleft1 {
-    grid-column:  1 / 2;
-    grid-row: 1 / 7;
+    grid-column: 1 / 2;
+    grid-row: 1 / 8;
     background: rgb(245, 175, 163);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
-    height: 300px;
 }
