--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -8,8 +8,8 @@
 
 .header--box {
     display: grid;
-    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     width: 100wv !important; 
     height: 150px;
     gap: 5px;
@@ -18,46 +18,72 @@
 
 
 .box--headline {
-    grid-column: 4 / 6;
+    grid-column: 2 / 10;
     grid-row: 1 / 2;
     color: orange;
     justify-self: right;
 
 }
 
+.box--buttonbox1 {
+    display: flex;
+    justify-self: right;
+    grid-column: 8 / 10;
+    grid-row: 2 / 3;
+    gap: 5px;
+    min-width: 300px;
+}
+
+.box--buttonbox2 {
+    display: flex;
+    display: flex;
+    justify-self: right;
+    grid-column: 8 / 10;
+    grid-row: 3 / 4;
+    gap: 5px;
+}
+
 .box--button1 {
+    display: flex;
+    justify-content: right;
+    justify-self: right;
     background: rgb(158, 158, 238);
+    min-width: 150px;
     max-width: 200px;
     border-radius: 50px;
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
     padding: 5px;
 }
 
 .box--button2 {
+    display: flex;
+    justify-content: right;
+    justify-self: right;
     background: orange;
+    min-width: 150px;
     max-width: 200px;
     border-radius: 50px;
-    grid-column: 4 / 5;
-    grid-row: 3 / 4;
     padding: 5px;
 }
 
 .box--button3 {
+    display: flex;
+    justify-content: right;
+    justify-self: right;
     background: rgb(245, 175, 163);
+    min-width: 150px;
     max-width: 200px;
     border-radius: 50px;
-    grid-column: 5 / 6;
-    grid-row: 2 / 3;
     padding: 5px;
 }
 
 .box--button4 {
+    display: flex;
+    justify-content: right;
+    justify-self: right;
     background: rgb(234, 77, 77);
+    min-width: 150px;
     max-width: 200px;
     border-radius: 50px;
-    grid-column: 5 / 6;
-    grid-row: 3 / 4;
     padding: 5px;
 }
 
@@ -68,7 +94,7 @@
     background: pink;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    /* text-align: right; */
+    padding: 5px;
 }
 
 .box--leftbottomborder {
@@ -78,6 +104,7 @@
     grid-column: 1 / 2;
     grid-row: 3 / 6;
     border-bottom-left-radius: 50px;
+    padding: 5px;
 }
 
 .box--bottom1 {
@@ -87,49 +114,25 @@
 }
 
 .box--bottom2 {
-    background: rgb(158, 158, 238);
+    background: rgb(234, 77, 77);
     grid-column: 5 / 6;
     grid-row: 5 / 6;
 }
 
-@media only screen and (min-width: 766px) {
-    .header--box {
-        grid-template-columns: 150px 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
+.box--bottom3 {
+    background: rgb(158, 158, 238);
+    grid-column: 6 / 7;
+    grid-row: 5 / 6;
+}
 
-    .box--headline {
-        grid-column: 2 / 6;
-        grid-row: 1 / 2;
-    }
+.box--bottom4 {
+    background: rgb(158, 158, 238);
+    grid-column: 7 / 9;
+    grid-row: 5 / 6;
+}
 
-    .box--button1 {
-        grid-column: 4 / 5;
-    }
-    
-    .box--button2 {
-        grid-column: 4 / 5;
-    }
-
-    .box--button3 {
-        grid-column: 5 / 6;
-    }
-
-    .box--button4 {
-        grid-column: 5 / 6;
-    }
-
-    .box--bottom1 {
-        grid-column: 2 / 5;
-        grid-row: 5 / 7;
-    }
-    
-    .box--bottom2 {
-        grid-column: 5 / 6;
-        grid-row: 5 / 7;
-    }
-
-    .box--leftbottomborder {
-        grid-row: 3 / 7;
-    }
+.box--bottom5 {
+    background: rgb(234, 77, 77);
+    grid-column: 9 / 10;
+    grid-row: 5 / 6;
 }
