--- a/css/components/_navbar.css
+++ b/css/components/_navbar.css
@@ -7,7 +7,7 @@
     height: 67px;
     width: 100vw;
     background: black;
-    grid-template-columns: 150px 1fr 1fr 1fr 1fr;
+    grid-template-columns: 150px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     position: fixed;
     bottom: 0%;
@@ -25,76 +25,54 @@
 }
 
 .navbar--bottom1 {
-    grid-column: 2 / 5;
+    grid-column: 2 / 3;
     grid-row: 1 / 2;
-    background: rgb(158, 158, 238);
+    background: rgb(245, 175, 163);
 }
 
 .navbar--bottom2 {
-    grid-column: 5 / 6;
+    grid-column: 3 / 6;
+    grid-row: 1 / 2;
+    background: orange;
+}
+
+.navbar--bottom3 {
+    grid-column: 6 / 7;
     grid-row: 1 / 2;
     background: rgb(158, 158, 238);
 }
 
+.navbar--bottom4 {
+    grid-column: 7 / 10;
+    grid-row: 1 / 2;
+    background: rgb(234, 77, 77);
+}
+
 .navbar--mainpagebutton {
-    grid-column: 2 / 3;
+    grid-column: 2 / 4;
     grid-row: 2 / 5;
-    max-width: 200px;
+    min-width: 80px;
     border: none;
     background: rgb(158, 158, 238);
 }
 
 .navbar--bookmarkpagebutton {
-    grid-column: 3 / 4;
+    grid-column: 4 / 6;
     grid-row: 2 / 5;
-    max-width: 200px;
+    min-width: 80px;
     background: rgb(158, 158, 238);
 }
 
 .navbar--addpagebutton {
-    grid-column: 4 / 5;
+    grid-column: 6 / 8;
     grid-row: 2 / 5;
-    max-width: 200px;
+    min-width: 80px;
     background: rgb(158, 158, 238);
 }
 
 .navbar--profilepagebutton {
-    grid-column: 5 / 6;
+    grid-column: 8 / 10;
     grid-row: 2 / 5;
-    max-width: 200px;
+    min-width: 80px;
     background: rgb(158, 158, 238);
-}
-
-@media only screen and (min-width: 766px) {
-    .header--box {
-        grid-template-columns: 150px 1fr 1fr 1fr 1fr;
-    }
-
-    .navbar-bottomleftcorner {
-        grid-column: 1 / 2;
-    }
-
-    .navbar--bottom1 {
-        grid-column: 2 / 5 ;
-    }
-
-    .navbar--bottom2 {
-        grid-column: 5 / 6;
-    }
-
-    .navbar--mainpagebutton {
-        grid-column: 2 / 3;
-    }
-
-    .navbar--bookmarkpagebutton {
-        grid-column: 3 / 4;
-    }
-
-    .navbar--addpagebutton {
-        grid-column: 4 / 5;
-    }
-
-    .navbar--profilepagebutton {
-        grid-column: 5 / 6;
-    }
 }
