--- a/css/components/main.css
+++ b/css/components/main.css
@@ -1,7 +1,7 @@
 main {
     /* space between the top and bottom */
-    margin-top: 140px;
-    margin-bottom: 67px;
+    margin-top: 155px;
+    margin-bottom: 70px;
     margin-left: 0;
     margin-right: 0;
     padding-left: 0;
@@ -14,4 +14,10 @@ li {
 
 html {
     background: black;
+    /* font-family: "Federation_Wide"; */
 }
+
+/* @font-face {
+    font-family: 'Federation_Wide';
+    src:url(./fonts/Federation_Wide.ttf);
+} */
