--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,7 @@
 @import "./components/_utils.css";
 @import "./components/_header.css";
 @import "./components/main.css";
-@import "./components/_quizcard1.css";
-@import "./components/_quizcard2.css";
-@import "./components/_quizcard3.css";
-@import "./components/_quizcard4.css";
-@import "./components/_quizcard5.css";
+@import "./components/_quizcard.css";
 @import "./components/_bookmark.css#";
 @import "./components/_addpage.css";
 @import "./components/_profile.css";
