--- a/z-storage.css
+++ b/z-storage.css
@@ -1,69 +1,6 @@
-/* .container {
-    /* set quizcardbox zo a flexbox */
-    display: flex;
-    /* ajust all items to the center of the page */
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-} */
-
-.container--profilepage {
-    /* set quizcard to grid */
-    display: grid;
-    /* set backdgroundcolor */
-    background-color: palegoldenrod;
-    /* set border thinkness type and color */
-    border: 5px solid orange;
-    /* for rounded corners */
-    border-radius: 50px;
-    /* for space between content and border */
-    padding: 20px;
-    /* for space between border and outer objects */
-    margin: 10px;
-    /* card setup */
-    grid-template-areas:
-    "headline headline"
-    "picture name"
-    "aboutme aboutme"
-    "qcounter bcounter"
-    "settings settings"
-    "darkmode dbutton";
-    /* sajust inner items to the center */
-    justify-items: center;
-}
-
-.profilepage--headline {
-    grid-area: headline;
-}
-
-.profilepage--picture {
-    grid-area: picture;
-}
-
-.profilepage--name {
-    grid-area: name;
-}
-
-.profilepage--aboutme {
-    grid-area: aboutme;
-}
-
-.profilepage--questionscounter {
-    grid-area: qcounter;
-}
-
-.profilepage--bookmarkscounter {
-    grid-area: bcounter;
-}
-
-.profilepage--headlinesettings {
-    grid-area: settings;
-}
-
-.profilepage--darkmodetext {
-    grid-area: darkmode;
-}
-
-.profilepage--darkmodebutton {
-    grid-area: dbutton;
+.test {
+    background-color: orange;
+    background-color: rgb(158, 158, 238);
+    background-color: rgb(245, 175, 163);
+    background-color: rgb(234, 77, 77);
 }
