--- a/css/components/_quizcard.css
+++ b/css/components/_quizcard.css
@@ -71,3 +71,8 @@
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
 }
+
+.quizcard--bookmarkicon {
+    width: 40px;
+    height: 40px;
+}
